Initial layout almost finished.
Co-authored-by: Erik Isaksson <erik.isaksson@medieinstitutet.se>
Co-authored-by: Josef Karlsson <josef.karlsson@medieinstitutet.se>
Co-authored-by: n1ct <n1ct@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,14 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalender</title>
 
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/reusables.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/sidebar.css">
+
+    <!-- FONTS & ICONS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/cb5f66c1ce.js" crossorigin="anonymous"></script>
+
+
+
+    <!-- JS -->
     
+
+</head>
+
+<body>
+
+
+    <header>
+        <div class="header-content flex justify-center align-center">
+            <h1>Kalender</h1>
+
+
+
+        </div>
+    </header>
+    <script src="js/calendar.js"></script>
+
+
+    <main class="flex">
+        <div class="sidebar">
+            <div class="day-info text-center">
+                <p>Dagen</p>
+                <p>Tiden</p>
+                <p>Vädret</p>
+            </div>
+            <div class="sidebar-todo">
+                <div class="sidebar-todo-headline">
+                    
+                </div>
+            </div>
+        </div>
+        <div class="calendar-container">
+            <div class="month"><i class="fa-solid fa-circle-chevron-left"></i>December<i
+                    class="fa-solid fa-circle-chevron-right"></i></div>
+            <div class="calendar">
+                <div class="day-name">Måndag</div>
+                <div class="day-name">Tisdag</div>
+                <div class="day-name">Onsdag</div>
+                <div class="day-name">Torsdag</div>
+                <div class="day-name">Fredag</div>
+                <div class="day-name">Lördag</div>
+                <div class="day-name">Söndag</div>
+                <div class="red day-card">
+                    <div class="date-number">1</div>
+                    <div class="calendar-todo">5</div>
+                </div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+                <div class="red"></div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
