--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
                 <p>Vädret</p>
             </div>
             <div class="sidebar-todo">
-                <div class="sidebar-todo-headline">
-                    
+                <div class="sidebar-todo-headline flex align-center">
+                    <i class="fas fa-list"></i>
+                    <p></p>
+
+
                 </div>
             </div>
         </div>
