Sidebar layout complete

--- a/index.html
+++ b/index.html
@@ -49,11 +49,21 @@
                 <p>Vädret</p>
             </div>
             <div class="sidebar-todo">
-                <div class="sidebar-todo-headline flex align-center">
+                <div class="sidebar-todo-headline flex space-around align-center">
                     <i class="fas fa-list"></i>
-                    <p></p>
+                    <p>To do</p>
+                    <i class="fas fa-plus"></i>
+                </div>
+                <div class="todo-item flex space-around">
+                    <div class="todo-info flex justify-center column text-center">
+                        <h5>Gratta bengan på 46 års dagen</h5>
 
-
+                        <p class="date">2021 - 12 - 24 | Hela dagen</p>
+                    </div>
+                    <div class="todo-item-icons flex column space-around">
+                        <i class="fas fa-edit"></i>
+                        <i class="far fa-trash-alt"></i>
+                    </div>
                 </div>
             </div>
         </div>
