Basic calendar rendering structure

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <!-- JS -->
-    
+
 
 </head>
 
@@ -59,8 +59,9 @@
         </div>
         <div class="calendar-container">
             <div class="month"><i class="fa-solid fa-circle-chevron-left"></i>December<i
-                    class="fa-solid fa-circle-chevron-right"></i></div>
-            <div class="calendar">
+                    class="fa-solid fa-circle-chevron-right"></i>
+            </div>
+            <div class="day-names flex">
                 <div class="day-name">Måndag</div>
                 <div class="day-name">Tisdag</div>
                 <div class="day-name">Onsdag</div>
@@ -68,6 +69,8 @@
                 <div class="day-name">Fredag</div>
                 <div class="day-name">Lördag</div>
                 <div class="day-name">Söndag</div>
+            </div>
+            <div class="calendar" id="calArea">
                 <div class="red day-card">
                     <div class="date-number">1</div>
                     <div class="calendar-todo">5</div>
