day-card layout complete

--- a/index.html
+++ b/index.html
@@ -78,35 +78,44 @@
                 <div class="day-name">Fredag</div>
                 <div class="day-name">Lördag</div>
                 <div class="day-name">Söndag</div>
-                <div class="red day-card">
-                    <div class="date-number">1</div>
-                    <div class="calendar-todo">5</div>
+
+                <div class="day-card">
+                    <div class="day-card-top flex space-between">
+                        <div class="date-number">
+                            <p id="day-card-date">1</p>
+                        </div>
+                        <div class="day-card-todo">
+                            <p id="todo-notification">3</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
-                <div class="red"></div>
+
+                <div class="day-card selected">
+                    <div class="day-card-top flex space-between">
+                        <div class="date-number">
+                            <p id="day-card-date">2</p>
+                        </div>
+                        <div class="day-card-todo">
+                            <p id="todo-notification">3</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="day-card holiday">
+                    <div class="day-card-top flex space-between">
+                        <div class="date-number">
+                            <p id="day-card-date">3</p>
+                        </div>
+                        <div class="day-card-todo">
+                            <p id="todo-notification">3</p>
+                        </div>
+                    </div>
+                    <div class="day-card-bottom flex justify-center">
+                        <p id="holiday">Juldagen</p>
+                    </div>
+
+                </div>
+                
             </div>
         </div>
     </main>
