--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     <!-- JS -->
     <script src="js/calendar.js"></script>
-    <script src="js.todo.js"></script>
+    <script src="js/daycard.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/main.js"></script>
 
 </head>
 
