--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 
     <!-- JS -->
-    <script src="js/calendar.js"></script>
+    <script src="js/Date.js"></script>
+    <script src="js/Calendar.js"></script>
     <script src="js/daycard.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/main.js"></script>
