--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
     <main class="flex">
         <div class="sidebar">
             <div class="day-info text-center">
-                <div class="date-clock align-center flex">
-                    <p id="clock"></p>
+                <div class="date-clock align-center flex column">
                     <p id="date"></p>
-
+                    <p id="clock"></p>
+                    
                 </div>
-                <p>Vädret</p>
+                <!-- <p>Vädret</p> -->
             </div>
             <div class="sidebar-todo">
                 <div class="sidebar-todo-headline flex space-around align-center">
