Dummy todos can be added

--- a/index.html
+++ b/index.html
@@ -61,17 +61,19 @@
                 <div class="sidebar-todo-headline flex space-around align-center justify-center">
                     <i class="fas fa-calendar" id="calendar-btn"></i>
                     <p>To do</p>
-                    <i class="fas fa-plus"></i>
+                    <i class="fas fa-plus" id="add-todo-btn"></i>
                 </div>
-                <div class="todo-item flex space-around">
-                    <div class="todo-info flex justify-center column text-center">
+                <div id="todolist">
+                    <div class="todo-item flex space-around">
+                        <div class="todo-info flex justify-center column text-center">
                             <p class="todo-date">2021 - 12 - 24 | Hela dagen</p>
-                        <h5>Gratta bengan på 46 års dagen</h5>
-
-                    </div>
-                    <div class="todo-item-icons flex column space-around">
-                        <i class="fas fa-edit"></i>
-                        <i class="far fa-trash-alt"></i>
+                            <h5>Gratta bengan på 46 års dagen</h5>
+                            
+                        </div>
+                        <div class="todo-item-icons flex column space-around">
+                            <i class="fas fa-edit"></i>
+                            <i class="far fa-trash-alt"></i>
+                        </div>
                     </div>
                 </div>
             </div>
