--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <!-- JS -->
     <script defer src="./js/menu.js"></script>
-    <script src="js/Date.js"></script>
-    <script src="js/Calendar.js"></script>
+    <script src="js/date.js"></script>
+    <script src="js/calendar.js"></script>
     <script src="js/daycard.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/main.js"></script>
