Misc UI improvements
#32

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <main class="flex">
         <div class="sidebar flex column align-center">
-            <div class="day-info">
+            <div class="day-info" id="today" title="Gå till idag">
                 <div class="date-clock align-center flex column">
                     <p id="day"></p>
                     <p id="date"></p>
